plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.7'
    id 'io.spring.dependency-management' version '1.1.5'
}

group = 'com.next'
version = '0.0.1-SNAPSHOT'

ext {
    set('springdocSwagger', '2.6.0')
    set('databaseRider', '1.42.0')
    set('mockserver', '5.15.0')
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Email verification and authentication
    implementation 'org.springframework.boot:spring-boot-starter-mail'
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //JWT
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-impl:0.11.5'
    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // db
    implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.4.1'
    runtimeOnly 'com.h2database:h2'

    // Swagger - springdoc
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:${springdocSwagger}"

    // utils
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    implementation 'org.apache.commons:commons-lang3:3.14.0'
    implementation 'org.apache.commons:commons-collections4:4.4'
    implementation 'org.apache.commons:commons-text:1.12.0'

    // test
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'com.h2database:h2:2.2.224'

    testImplementation "org.mock-server:mockserver-netty:${mockserver}"
    testImplementation "org.mock-server:mockserver-client-java:${mockserver}"
    testImplementation "com.github.database-rider:rider-core:${databaseRider}"
    testImplementation "com.github.database-rider:rider-junit5:${databaseRider}"
    testImplementation "com.github.database-rider:rider-spring:${databaseRider}"
}

tasks.named('test') {
    useJUnitPlatform()
}
